<resources>
    <string name="app_name">Evans</string>
    <string name="see_more">See More</string>
    <string name="edit">Edit</string>
    <string name="set_appt">Set Appointment</string>
    <string name="title_activity_main2">Main2Activity</string>

    <!-- For the navigation drawer -->
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="business_address"> 67 Winn Dr, Rexburg, ID 83440 </string>
    <string name="dollar_sign">$</string>

    <!-- For navigation bar menu item titles-->
    <string name="menu_customers"> Customer </string>
    <string name="menu_goals"> Goals </string>
    <string name="menu_appointments"> Appointments </string>
    <string name="menu_sales"> Sales </string>
    <string name="menu_service"> Service </string>
    <string name="menu_exit"> Exit </string>
    <string name="menu_create_report"> Create Report </string>
    <string name="menu_fin_rep">Financial Report</string>
    <string name="menu_expense">Expense</string>

    <!--Field edit titles-->
    <string name="appointment_name">Name</string>
    <string name="appointment_service">Service</string>
    <string name="appointment_price">Price</string>
    <string name="appointment_notes">Notes</string>
    <string name="appointment_time">Time</string>
    <string name="appointment_date">Date</string>
    <string name="showed_up">Showed up </string>
    <string name="pick_date">Pick Date</string>
    <string name="pick_time">Pick Time</string>

    <string name="service_description">Description</string>
    <string name="service_title">Title</string>
    <string name="service_price">Price</string>

    <string name="customer_name">Name</string>
    <string name="customer_email">Email</string>
    <string name="customer_phone">Phone</string>
    <string name="customer_other_info">Other information</string>

    <string name="goal_name">Name</string>
    <string name="goal_start_date">Start Date</string>
    <string name="goal_end_date">End Date</string>
    <string name="goal_details">Details of Goal</string>
    <string name="goal_repeat_times">Repeat Times</string>
    <string name="date_enter_hint">Day-Month-Year Hour:Min</string>

    <string name="expense_name">Name</string>
    <string name="expense_price">Price</string>
    <string name="expense_date">Date</string>


    <!-- button strings-->
    <string name="button_edit">Edit</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="done">Done</string>
    <string name="sale_date">Pick Date</string>
    <string name="sale_service">Select Service</string>
    <string name="sale_price">Sales Price</string>
    <string name="sale_customer">Sales Customer</string>

    <string name="fin_rep_start_date">Start Date</string>
    <string name="fin_rep_end_date">End Date</string>
    <string name="fin_rep_cost">Cost</string>
    <string name="fin_rep_net">Net</string>
    <string name="fin_rep_profit">Profit</string>

    <!-- set this as the default string in layouts where it will be overwritten-->
    <string name="default_string">Default</string>
    <string name="bttn_calculate">Calculate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="goal_complete">Complete</string>
    <string name="goal_title">Title</string>

    <string name="title">Title</string>

    <string name="currency"> $ </string>

    <string name="label_manage">Manage</string>

    <string name="label_app">App</string>
    <string name="exit">Exit</string>


    <!-- Strings below here need to be sorted-->

</resources>
