<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.evans.ui.ViewFragments.AppointmentViewFragment"
    android:background="@color/AppBackgroundColor">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Include our standard view header -->
        <include
            android:id="@+id/appointment_view_bar"
            layout="@layout/view_bar" />

        <!-- Customer name -->
        <TextView
            android:id="@+id/txt_appt_view_customer_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/customer_name"
            android:drawableStart="@drawable/ic_person_black_24dp"
            android:drawablePadding="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appointment_view_bar" />

        <!-- Customer phone -->
        <TextView
            android:id="@+id/txt_appt_view_customer_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/customer_phone"
            android:drawableStart="@drawable/ic_phone_black_24dp"
            android:drawablePadding="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_appt_view_customer_name" />

        <!-- Customer email -->
        <TextView
            android:id="@+id/txt_appt_view_customer_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/customer_email"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:drawablePadding="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_appt_view_customer_phone" />

        <!-- Appointment Date -->
        <TextView
            android:id="@+id/txt_appointment_view_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/appointment_date"
            android:drawableStart="@drawable/ic_date_black_24dp"
            android:drawablePadding="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_appt_view_customer_email" />

        <TextView
            android:id="@+id/txt_appointment_view_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/appointment_time"
            android:drawableStart="@drawable/ic_time_black_24dp"
            android:drawablePadding="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_appointment_view_date" />

        <!-- Service type -->
        <TextView
            android:id="@+id/txt_appointment_view_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/appointment_service"
            android:drawableStart="@drawable/ic_grain_black"
            android:drawablePadding="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_appointment_view_time" />

        <!-- Price  -->
        <TextView
            android:id="@+id/txt_appointment_view_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/service_price"
            android:drawableStart="@drawable/ic_dollar_black_24dp"
            android:drawablePadding="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_appointment_view_time" />


        <CheckBox
            android:id="@+id/chk_showed_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/showed_up"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_appointment_view_service" />

    </android.support.constraint.ConstraintLayout>
</FrameLayout>
