<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.evans.ui.AppointmentEditFragment"
    android:background="#ffffff">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <!-- Include our standard edit header -->
        <include layout="@layout/edit_bar"
            android:id="@+id/edit_bar_in_appointment"
            />


        <!-- Customer name -->
        <TextView
            android:id="@+id/txt_customer_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:text="@string/customer_name"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_bar_in_appointment"/>


        <EditText
            android:id="@+id/etxt_customer_name"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintStart_toEndOf="@+id/txt_customer_name"
            app:layout_constraintTop_toBottomOf="@id/edit_bar_in_appointment" />


        <!-- Customer email -->
        <TextView
            android:id="@+id/txt_customer_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:text="@string/customer_email"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_customer_name" />


        <EditText
            android:id="@+id/etxt_customer_email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            app:layout_constraintStart_toEndOf="@+id/txt_customer_email"
            app:layout_constraintTop_toBottomOf="@id/etxt_customer_name" />


        <!-- Customer phone -->
        <TextView
            android:id="@+id/txt_customer_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:text="@string/customer_phone"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_customer_email" />


        <EditText
            android:id="@+id/etxt_customer_phone"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="phone"
            app:layout_constraintStart_toEndOf="@+id/txt_customer_phone"
            app:layout_constraintTop_toBottomOf="@id/etxt_customer_email" />


        <!-- Appointment Date -->
        <TextView
            android:id="@+id/txt_appointment_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:text="@string/appointment_date"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etxt_customer_phone" />


        <EditText
            android:id="@+id/etxt_appointment_date"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/appointment_date"
            android:focusable="false"
            android:clickable="true"
            android:inputType="datetime"
            app:layout_constraintHorizontal_bias="0.556"
            app:layout_constraintStart_toEndOf="@+id/txt_appointment_date"
            app:layout_constraintTop_toBottomOf="@id/etxt_customer_phone" />

        <EditText
            android:id="@+id/etxt_appointment_time"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/appointment_time"
            android:clickable="true"
            android:focusable="false"
            app:layout_constraintTop_toBottomOf="@id/etxt_customer_phone"
            app:layout_constraintStart_toEndOf="@id/etxt_appointment_date"

            />


        <!-- Service type -->
        <TextView
            android:id="@+id/txt_service_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:text="@string/appointment_service"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_appointment_date" />


        <Spinner
            android:id="@+id/spinner_service_type"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toEndOf="@+id/txt_service_type"
            app:layout_constraintTop_toBottomOf="@id/etxt_appointment_date" />

        <!-- Price  -->
        <TextView
            android:id="@+id/txt_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:text="@string/service_price"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinner_service_type" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dollar_sign"
            android:layout_marginTop="30dp"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/spinner_service_type"
            app:layout_constraintStart_toEndOf="@id/txt_price"
            android:layout_marginLeft="8dp"/>


        <EditText
            android:id="@+id/etxt_price"
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="numberDecimal"
            app:layout_constraintStart_toEndOf="@+id/txt_price"
            app:layout_constraintTop_toBottomOf="@id/spinner_service_type" />


        <CheckBox
            android:id="@+id/chk_showed_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/showed_up"
            app:layout_constraintStart_toEndOf="@id/etxt_price"
            app:layout_constraintTop_toBottomOf="@id/txt_service_type" />


        <!-- Notes -->
        <TextView
            android:id="@+id/txt_appointment_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:text="@string/appointment_notes"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_price" />

        <EditText
            android:id="@+id/etxt_appointment_note"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="textMultiLine"
            android:imeOptions="actionDone"
            app:layout_constraintStart_toEndOf="@+id/txt_appointment_note"
            app:layout_constraintTop_toBottomOf="@+id/txt_price" />





    </android.support.constraint.ConstraintLayout>

</FrameLayout>
