<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.evans.ui.EditFragments.SaleEditFragment">

    <!-- TODO: Update blank fragment layout -->

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Include our standard edit header -->
        <include
            layout="@layout/edit_bar"
            android:id="@+id/sale_edit_bar"
            />

        <TextView
            android:id="@+id/txt_service_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/sale_service"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sale_edit_bar" />


        <Spinner
            android:id="@+id/spinner_sale_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txt_service_type"
            app:layout_constraintTop_toBottomOf="@+id/sale_edit_bar" />

        <TextView
            android:id="@+id/txt_sale_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:labelFor="@id/etxt_sale_date"
            android:text="@string/sale_date"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintBaseline_toBaselineOf="@+id/etxt_sale_date"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <EditText
            android:id="@+id/etxt_sale_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:ems="10"
            android:focusable="false"
            android:inputType="datetime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="@+id/spinner_sale_type"
            app:layout_constraintTop_toBottomOf="@+id/spinner_sale_type" />


        <TextView
            android:id="@+id/txt_sale_price"
            android:layout_width="72dp"
            android:layout_height="23dp"
            android:layout_marginStart="16dp"
            android:labelFor="@id/etxt_sale_price"
            android:text="@string/sale_price"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintBaseline_toBaselineOf="@+id/etxt_sale_price"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/txt_service_dollar_sign"
            android:layout_width="18dp"
            android:layout_height="33dp"
            android:text="@string/dollar_sign"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/etxt_sale_price"
            app:layout_constraintStart_toStartOf="@+id/etxt_sale_price" />


        <EditText
            android:id="@+id/etxt_sale_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="@+id/spinner_sale_type"
            app:layout_constraintTop_toBottomOf="@+id/etxt_sale_date" />


    </android.support.constraint.ConstraintLayout>
</FrameLayout>
